# ejobdp

./: .gitignore  CMakeLists.txt  README.md
include/: dispatch.hpp
tests/: CMakeLists.txt  test_dispatch.cpp
